--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Daily Journal</title>
   <meta charset="utf-8">
+  <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/009/305/647/small/cartoon-book-history-book-diary-wisdom-education-old-book-clipart-design-illustration-free-png.png" />
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
